package org.arvinw.example4_3;

/**
 *  抽象产品
 */
public abstract class Enemy {

    protected int x;
    protected int y;

    public Enemy(int x,int y){
        this.x = x;
        this.y = y;
    }
    public abstract void show();
}
